# archive-bot

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: publish.yml
examples/: basic.Cargo.toml  basic.rs  basic.rs.example  lambda-netlify.Cargo.toml.example  lambda-netlify.rs  lambda-netlify.rs.example
src/: channels.rs  client.rs  config.rs  error.rs  get.rs  lib.rs  main.rs  post.rs  slack_client.rs  slack_error.rs  slack_get.rs  slack_post.rs  slack_response.rs  types.rs
