[package]
name = "archive-bot"
version = "0.1.0"
authors = ["Emma Litwa-Vulcu <80431903+reiniiriarios@users.noreply.github.com>"]
repository = "https://github.com/reiniiriarios/archive-bot"
description = "Slack bot helper for managing outdated channels."
license = "GPL-3.0+"
edition = "2021"

[dependencies]
chrono = "0.4.23"
rand = "0.8.5"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
slack_api = "0.23.1"
substring = "1.4.5"
tokio = { version = "1.25.0", features = ["full"] }
