[package]
name = "archive_bot"
version = "0.1.3"
authors = ["Emma Litwa-Vulcu <80431903+reiniiriarios@users.noreply.github.com>"]
repository = "https://github.com/reiniiriarios/archive-bot"
description = "Slack bot helper for managing outdated channels."
keywords = ["slack", "slackbot", "slack-bot"]
license = "GPL-3.0+"
edition = "2021"
exclude = ["/examples", "/.github"]

[dependencies]
chrono = "0.4.23"
log = "0.4.17"
rand = "0.8.5"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
substring = "1.4.5"
tokio = { version = "1.25.0", features = ["full"] }
futures = "0.3.26"
lazy_static = "1.4.0"
arc-swap = "1.6.0"

[dev-dependencies]
simplelog = "0.12.0"

[features]
default = ["prod"]                             
unit = []
unit_output = []
prod = []
