[package]
name = "archive_bot"
version = "0.2.2"
authors = ["Emma Litwa-Vulcu <80431903+reiniiriarios@users.noreply.github.com>"]
repository = "https://github.com/reiniiriarios/archive-bot"
description = "Slack bot helper for managing outdated channels."
keywords = ["slack", "slackbot", "slack-bot"]
license = "GPL-3.0+"
edition = "2021"
exclude = ["/examples", "/.github"]

[dependencies]
chrono = "0.4.24"
log = "0.4.17"
rand = "0.8.5"
reqwest = "0.11.15"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
substring = "1.4.5"
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3.27"
lazy_static = "1.4.0"
arc-swap = "1.6.0"

[dev-dependencies]
simplelog = "0.12.1"

[features]
default = ["prod"]                             
unit = []
unit_output = []
prod = []
